src/main/java/com/example/ErrorLogProcessor/Dto/error/ErrorLogSearchDto.java
package com.example.ErrorLogProcessor.Dto.error;

public class ErrorLogSearchDto {

}
